# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [0.9] - 2023/01/21

### Added
 - Kickban command allows admins to ban clients
 - DPS endpoints that don't require client certificates
 - Monitor clients receive persist data, can inject packets
 - Monitor clients receive all routed packets, not just broadcast
 - Relative path support for config

### Changed
 - Migrated from Python OpenSSL to Cryptography
 - Pinned Flask dependency to ~2.0
 - Improved "correctness" of cenerated certificates

### Fixed
 - SSL certs being generated in a way that Android rejects
 - Packets with empty <marti/> tags get routed now

### Contributors
 - @fieldmapper, @sgofferj, @skadakar, and @FarrantAlex for their help wrangling
   GitHub issues
 - All the patient users in `#taky` who gave helpful feedback for this release

## [0.8.4] - 2022-09-08

### Added
 - Management socket + status command
 - TCP Monitor socket
 - Log messages from anonymous users
 - max_persist_ttl option to prevent long lived COTs
 - P12 bundles now have a "Friendly Name" set

### Changed
 - Overhaul of config object to be a global variable
 - Refactor of client objects for code reuse

### Fixed
 - Allowing for a proper shutdown from SIGTERM
 - Clients receiving malformed XML doesn't crash the server
 - Switched to nonblocking sockets to prevent rare lockup
 - Removed the server's private key from the server.p12 file
 - Don't crash after PDB exit

### Contributors
 - Thanks to @AdakaR for helping find both the XML and blocking socket bugs!
 - Thanks to Tom for finding the private key issue!
 - Thanks to Alex and Doug for helping with development!
 - Thanks to @jazap for the logo!

## [0.8.3] - 2022-04-10

### Added
 - Generation of iTAK compatible client certificates

### Fixed