@@ -4,6 +4,12 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [Unreleased] - 2023/02/04
+
+### Added
+ - Support for GeoChat with custom groups
+ - Support for Marti packets using UIDs
+
 ## [0.9] - 2023/01/21
 
 ### Added
